@@ -56,6 +56,7 @@ Version 0.5
 - added :class:`CommonRequestDescriptorsMixin`
 - added :attr:`CommonResponseDescriptorsMixin.mimetype_params`
 - added :mod:`werkzeug.contrib.lint`
+- added `passthrough_errors` to `run_simple`.
 
 Version 0.4.1
 -------------
